# platform.core.telephony.tel-plugin-nitz

./: CMakeLists.txt  LICENSE  README  project.config  tel-plugin-nitz.manifest
inc/: common.h  time_update.h
include/: common.h  time_update.h
packaging/: tel-plugin-nitz.spec
resources/: mcctable.xml
src/: citylist.c  citylist.h  common.h  desc-nitz.c  time_update.c  time_update.h
test_src/: CMakeLists.txt  nitz_test.c  nitz_test.h  nitz_test.sh
