CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(nitz-plugin C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR ${LIB_INSTALL_DIR})
SET(INCLUDEDIR "\${prefix}/include")

# Set required packages
INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
	glib-2.0
	tcore
	vconf
	alarm-service
	libxml-2.0
	icu-i18n
	capi-system-device
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/inc/
	${CMAKE_SOURCE_DIR}/test_src/
)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror -Wextra -fvisibility=hidden -fPIC")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-parameter -Wno-missing-field-initializers -Wdeclaration-after-statement -Wmissing-declarations -Wredundant-decls -Wcast-align")

ADD_DEFINITIONS("-DFEATURE_TLOG_DEBUG")
ADD_DEFINITIONS("-DTCORE_LOG_TAG=\"NITZ\"")
ADD_DEFINITIONS("-DPLUGIN_VERSION=${VERSION}")
ADD_DEFINITIONS("-DEXPORT_API=__attribute__((visibility(\"default\")))")

IF (TIZEN_FEATURE_TEST_ENABLE)
	ADD_DEFINITIONS("-DTIZEN_FEATURE_TEST_ENABLE")
ENDIF (TIZEN_FEATURE_TEST_ENABLE)

IF (TIZEN_FEATURE_NEED_RESTORED_GMT)
	ADD_DEFINITIONS("-DTIZEN_FEATURE_NEED_RESTORED_GMT")
ENDIF (TIZEN_FEATURE_NEED_RESTORED_GMT)

MESSAGE(${CMAKE_C_FLAGS})
MESSAGE(${pkgs_LDFLAGS})

SET(SRCS
	src/desc-nitz.c
	src/time_update.c
)

IF (TIZEN_FEATURE_TEST_ENABLE)
	ADD_SUBDIRECTORY(test_src)
ENDIF (TIZEN_FEATURE_TEST_ENABLE)
# library build
ADD_LIBRARY(nitz-plugin SHARED ${SRCS} ${TEST_SRCS})
TARGET_LINK_LIBRARIES(nitz-plugin ${pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(nitz-plugin PROPERTIES PREFIX "" OUTPUT_NAME nitz-plugin)

# install
INSTALL(TARGETS nitz-plugin
		LIBRARY DESTINATION ${LIBDIR}/telephony/plugins)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/resources/mcctable.xml DESTINATION /opt/data/etc PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ WORLD_READ)
